# rmr

./: Cargo.toml  Dockerfile  config.yaml  publish.sh
src/: config.rs  event.rs  ffmpeg.rs  main.rs  modect.rs  modect_mp4.rs  observable_buf.rs  pushover.rs
src/web/: get_event.rs  get_video.rs  list_camera.rs  list_events.rs  list_recording.rs  live.rs  live_hls.rs  live_mp4.rs  mod.rs
