[package]
name = "rmr"
version = "0.1.0"
edition = "2021"
authors = ["Protryon <max.bruce12@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/protryon/rmr"
description = "Rust Monitor & Record"
keywords = [ "monitor", "record", "camera", "motion", "detect" ]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
lazy_static = "1.4"
log = "0.4"
env_logger = "0.10.0"
indexmap = { version = "1.9", features = ["serde"] }
url = { version = "2.4", features = ["serde"] }
prometheus = "0.13.3"
prometheus_exporter = "0.8"
thiserror = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
image = "0.24.6"
reqwest = { version = "0.11", features = ["multipart"] }
serde_with = { version = "3.0", features = ["base64"] }
webp-animation = "0.7.0"
futures = "0.3"
clap = { version = "4.3.4", features = ["derive"] }
axum = { version = "0.6", features = ["headers"] }
anyhow = "1.0"
axum-util = "0.2"
typed-html = { git = "https://github.com/bodil/typed-html", rev = "e18d3289", version = "0.2.2" }
tokio-util = { version = "0.7", features = ["io"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
defer-lite = "1.0.0"
